fix line spacing issue on publications page

--- a/css/secondary-page.styl
+++ b/css/secondary-page.styl
@@ -52,6 +52,8 @@
       border-radius: 4px
       padding: 1em
 
+  .publications-page
+    line-height: initial
 
 .centered-grid
   margin: 0 auto
